site/styles/header.less
/**
 * Header Style Sheet
 * GreenTopEnergy
 *
 * Copyright (c) 2015. by Way2CU, http://way2cu.com
 * Authors: Mladen Mijatov
 */

header {
	background-color: white;
	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);

	text-align:  center;
}

header a.logo {
	vertical-align: middle;
}


header a.logo img{
	width:  163px;
	height: 40px;	
}

nav#main {
	margin-left: 3em;
	margin-right: 3em;
	vertical-align: middle;
}

nav#main ul {
	margin: 0px;
	padding: 0px;

	list-style-type: none;
	list-style-image: none;
	line-height: 0;
}

nav#main > ul > li {
	display:  inline-block;
	position: relative;
}

nav#main > ul > li >  a {
	display: block;
	padding-left: 15px;
	padding-right: 15px;
	padding-top: 1.2em;
	padding-bottom: 1.2em;
	line-height: 2em;
	text-decoration: none;
	color: @color_header;
	position: relative;
	overflow: hidden;
	transition: all 0.3s;
}

nav#main > ul > li >  a:hover {
	background-color: @color_header;
	color: @color_ac_text;
}

nav#main > ul > li > a.login {
	position: relative;
	margin-left: 2em;

	color: @color_special;
}

nav#main > ul > li > a.login:before {
	display: block;
	position: absolute;
	width: 100%;
	height: 2.5em;
	top: -100%;
	left: 0;
	content: '';
}

nav#main > ul > li > a.login:hover {
	background-color: @color_special;
	color: @color_ac_text;
}

nav#main > ul > li > a.login svg {
	display: inline-block;
	width: 1.5em;
	height: 1.5em;
	vertical-align: middle;
	margin-left:  10px;
}


nav#main ul li > ul {
	position: absolute;
	top: 100%;
	left: 0px;
	max-height: 0px;

	visibility: hidden;
	opacity: 0;

	padding-top: 10px;
	padding-bottom: 10px;
	padding-left: 10px;
	padding-right: 10px;

	border: 1px solid @color_header;
	background-color: @color_ac_text;
	transition: all 0.6s;

	text-align: left;
}

nav#main ul li:hover ul {
	visibility: visible;
	opacity: 1;
	max-height: 500px;
}

nav#main > ul > li:hover > a {
	background-color:  @color_header;
	color: @color_ac_text;
}

nav#main ul li ul li {
	display: block;
	margin: 0px;
	padding: 0px;
	width: 250px;
}

nav#main ul li ul li a {
	display: block;
	text-decoration: none;
	padding-top: 10px;
	padding-bottom: 10px;
	padding-left: 5px;
	padding-right: 5px;
	line-height: 100%;
	color: @color_header;
	transition: all 0.3s;
}

nav#main ul li ul li:hover a {
	background-color: @color_header;
	color: @color_ac_text ;
}

header > a.phone {
	vertical-align: middle;
	color: @color_header;
	font-weight: 700;
	text-decoration:  none;
}

header > a.phone > svg {
	display: inline-block;
	vertical-align: middle;
	width: 1.5em;
	height: 1.5em;
	margin-right: 5px;
	margin-top: -0.2em;
}

